--- a/src/prob_cbr/preprocessing/processing_sweep_config.yaml
+++ b/src/prob_cbr/preprocessing/processing_sweep_config.yaml
@@ -8,13 +8,15 @@ program: src/prob_cbr/preprocessing/preprocessing.py
 method: grid
 parameters:
   data_dir:
-    value: /home/rajarshi/Dropbox/research/Open-BIo-Link/
+    value: /mnt/nfs/home/rajarshi/Dropbox/research/drug_repurposing_prob_cbr/
   dataset_name:
-    value: obl2021
+    value: MRN_ind
   num_paths_to_collect:
     value: 5000
+  linkage:
+    value: 0.0
   expt_dir:
-    value: /mnt/nfs/work1/mccallum/rajarshi/expts/obl/
+    value:  /mnt/nfs/work1/mccallum/rajarshi/expts/drug_repurposing_prob_cbr/
   total_jobs:
     value: 100
   current_job:
